//
//  NewsAppApp.swift
//  NewsApp
//
//  Created by Julio Rodriguez on 7/1/24.
//

import SwiftUI

@main
struct NewsAppApp: App {
    

    var body: some Scene {
        WindowGroup {
            ArticleView()
           /* ContentView()
                .environment(ModelData())*/
        }
    }
}
